force-app/main/default/objects/OrderItem/fields/Activation_record_type__c.field-meta.xml
<CustomField>
    <fullName>Activation_record_type__c</fullName>
    <description>The activation record type of the product</description>
    <formula>TEXT(SBQQ__QuoteLine__r.SBQQ__Product__r.Activation_Record_Type__c)</formula>
    <label>Activation record type</label>
    <type>Text</type>
</CustomField>