force-app/main/default/objects/OrderItem/fields/Original_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Original_Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Order Products (Original Quote Line)</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>