force-app/main/default/objects/OrderItem/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <description>To copy the value of the Product Group from Product to use on Activation</description>
    <label>Product Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>